<resources>
    <string name="app_name">Caregiver</string>
    <string name="alert_status">ALERT! Status</string>
    <string name="check_in_status">Check-In Status</string>
    <string name="schedule_new_medication">Add Alert</string>
    <string name="na">NA</string>
    <string name="recipient">Recipient:  </string>
    <string name="list_of_todays_medication">Medication Alerts for</string>
    <string name="save">SAVE</string>
    <string name="cancel_string">CANCEL</string>
    <string name="schedule_new_medication_title_string">Medication Alert Information</string>
    <string name="alert_name">Alert Name: </string>
    <string name="example_alert_name">eg. \'Morning\'</string>
    <string name="pick_time">Pick Time</string>
    <string name="view_all_scheduled_medication_alerts">View All Scheduled Medication Alerts</string>
    <string-array name="recurrence_options">
        <item>Daily</item>
        <item>Days of the Week</item>
    </string-array>

    <!-- Account login Strings -->
    <string name="account_sign_username_label">Username</string>
    <string name="account_sign_username_default">John Doe</string>
    <string name="account_sign_password_label">Password</string>
    <string name="account_sign_password_default">······</string>
    <string name="account_sign_login_btn">Log in</string>
    <string name="account_sign_signup_btn">Sign up</string>

    <!-- New Account Strings -->
    <string name="new_account_label">What role do you play? </string>
    <string name="new_account_careGiver">Caregiver</string>
    <string name="new_account_careRecipient">Care Recipient</string>
    <string name="new_careGiver_label">Who are you caring for?</string>
    <string name="new_careGiver_default">John Doe</string>
    <string name="btn_next">Next</string>
    <string name="new_careRecipient_label">Who is caring for you?</string>
    <string name="new_careRecipient_default">John Doe</string>
    <string name="btn_search">Search</string>
    <string name="new_careRecipient_search_label">Is this your name?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <string name="ui_start_care_receiver">Click here to start care receiver</string>

    <!-- CareRecipient Strings -->
    <string name="recipient_name">John Doe</string>
    <string name="ui_helpBtn_title">HELP</string>
    <string name="ui_medBtn_title">MEDICATION DETAILS</string>
    <string name="toolbar_title_care_recipient">Caregiver</string>
    <string name="schedule_title">Upcoming Medications</string>
    <string name="ui_title_checkin_Btn">Check-in</string>
    <string name="ui_title_fall_Btn">Fall Alert</string>
    <string name="ui_title_fall_activity">FALL DETECTED -</string>
    <string name="ui_title_fall_time">60</string>
    <string name="recipient_medication_label">Below are todays medications</string>

    <!-- Fall Actvity Strings-->
    <string name="ui_OK_Btn">I am OK</string>
    <string name="ui_HELP_Btn">HELP</string>

    <string name="profile_preference">caregiver_profile_preferences</string>
    <!-- Checkin Activity Strings -->
    <string name="ui_checkin_welcome_text">Time to Check-in!</string>
    <string name="ui_Checkin_Btn">Check-in!</string>

</resources>
