<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/ui_title_fall_activity"/>

    <Button
        android:id="@+id/FallBtnOk"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="18sp"
        android:text="@string/ui_OK_Btn"
        android:onClick="onFallOkClicked"/>

    <Button
        android:id="@+id/FallBtnHelp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="18sp"
        android:text="@string/ui_HELP_Btn"
        android:onClick="onFallHelpClicked"/>


</LinearLayout>
