<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:includeFontPadding="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_careGiver_label"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/new_caregiver_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_careGiver_default"
            android:layout_weight="3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:layout_weight="1"
            android:onClick="onCareGiverNext"/>
    </LinearLayout>


</LinearLayout>