<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:includeFontPadding="false">

    <LinearLayout
        android:id="@+id/find_caregiver_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/new_careRecipient_label" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/find_caregiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_careRecipient_default"
                android:layout_weight="3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_search"
                android:onClick="onSearch"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>