<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        style="@style/custom_toolbar"
        android:id="@+id/toolbar"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_width="match_parent"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:onClick="onMenuClicked"
        app:title="@string/toolbar_title_care_recipient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_title"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:onClick="onHelpClicked"
        android:layout_gravity="bottom"
        android:textSize="20sp"
        android:text="@string/ui_helpBtn_title"/>

</LinearLayout>
