<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:includeFontPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/new_careRecipient_search_label"/>

        <TextView
            android:id="@+id/carerecipient_name_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="John Doe"
            android:textSize="50dp"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:textSize="25dp"
                android:text="@string/btn_no"
                android:fontFamily="serif"
                android:onClick="onNameReject">
            </Button>

            <Button
                android:id="@+id/btn_cancel_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:textSize="25dp"
                android:text="@string/btn_yes"
                android:fontFamily="serif"
                android:onClick="onNameConfirm">
            </Button>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>